<resources>
    <string name="app_name">PDM_2021_II_P1_PROYECTO1</string>
    <string name="txtNumeroPrestamo">Número de prestamo del libro</string>
    <string name="txvprestamolibro">Préstamo de libros</string>
    <string name="txtnumerolibro">Número del Libro</string>
    <string name="txtfechaprestamo">Fecha de préstamo</string>
    <string name="btnvisualisarprestamo">Visualizar</string>
    <string name="btnguardarprestamo">Guardar</string>
    <string name="txtnumerocuenta">Número de cuenta</string>
    <string name="txtnumerocuentaprestamo">Número de cuenta</string>
    <string name="txvfechadevolucion">Fecha de devolución</string>
    <string name="imvselectorfecha">Selector de fecha</string>
    <string name="txtingresenumerocuenta">Ingrese un número de cuenta</string>
    <string name="txtnumeroprestamo">Número de préstamo</string>
    <string name="txtnumerolibrovisualizar">Número de libro</string>
    <string name="txtfechaprestamovisualizar">Fecha de Préstamo</string>
    <string name="txtfechadevoulucionvisualizar">Fecha de devolución</string>
    <string name="btnbuscar">Buscar</string>
    <string name="txvTitulo">Visualizar prestamos de libros</string>
    <string name="txteditorial">Editorial</string>
    <string name="txtnombrelibro">Nombre del Libro</string>
    <string name="txtfechapublicacion">Fecha de Publicación</string>
    <string name="txtlibros">Libros</string>
    <string name="txtAutor">Autor</string>
    <string name="btnguarda">Guardar</string>
    <string name="btnvisualizar">Visualizar</string>
    <string name="txvmostrar_calendario_icono">Mostrar Calendario icono</string>
    <string name="btnlibros">Libros</string>
    <string name="btnalumnos">Alumnos</string>
    <string name="btnprestamolibro">Préstamo Libros</string>
    <string name="txvbienvenido">Bienvenido al Proyecto 1</string>
    <string name="txvtituloalumnos">Alumnos</string>
    <string name="txtcorreoelectronico">Correo Electrónico</string>
    <string name="txtnombrecarrera">Nombre de la Carrera</string>
    <string name="txtfechaingreso">Fecha de Ingreso</string>
    <string name="txtnombrealumno">Nombre del Alumno</string>
    <string name="imgnumerocuenta">Icono número de cuenta</string>
    <string name="imgnombrealumno">Icono nombre del alumno</string>
    <string name="imgnombrecarrera">Icono nombre de la carrera</string>
    <string name="imgfechaingreso">Icono fecha de ingreso</string>
    <string name="imgcorreoelectronico">Icono correo electrónico</string>
    <string name="txvtitulovisualizaralumnos">Visualización de Alumnos</string>
</resources>