<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/fondo2"
    tools:context=".VisualizarAlumnosActivity">

    <EditText
        android:id="@+id/txtMNombre"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:ems="10"
        android:hint="@string/txtnombrealumno"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toBottomOf="@+id/imvNombreAlumnoVisualizar"
        app:layout_constraintStart_toEndOf="@+id/imvNombreAlumnoVisualizar"
        android:importantForAutofill="no" />

    <EditText
        android:id="@+id/txtMNumero"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="25dp"
        android:ems="10"
        android:hint="@string/txtnumerocuenta"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toBottomOf="@+id/imvNumeroCuentaVisualizar"
        app:layout_constraintStart_toEndOf="@+id/imvNumeroCuentaVisualizar"
        android:importantForAutofill="no" />

    <ImageView
        android:id="@+id/imvCorreoElectronicoVisualizar"
        android:layout_width="51dp"
        android:layout_height="0dp"
        android:layout_marginStart="44dp"
        android:contentDescription= "@string/imgcorreoelectronico"
        app:layout_constraintBottom_toBottomOf="@+id/txtMCorreo"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/txtMCorreo"
        app:srcCompat="@drawable/email" />

    <ImageView
        android:id="@+id/imvNumeroCuentaVisualizar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="44dp"
        android:layout_marginTop="292dp"
        android:contentDescription= "@string/imgnumerocuenta"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/numerolibro" />

    <ImageView
        android:id="@+id/imvFechaIngresoVisualizar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="1dp"
        android:layout_marginTop="89dp"
        android:contentDescription= "@string/imgfechaingreso"
        app:layout_constraintStart_toStartOf="@+id/imvCorreoElectronicoVisualizar"
        app:layout_constraintTop_toBottomOf="@+id/imvNombreAlumnoVisualizar"
        app:srcCompat="@drawable/fecha" />

    <EditText
        android:id="@+id/txtMFecha"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:ems="10"
        android:hint="@string/txtfechaingreso"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toBottomOf="@+id/imvFechaIngresoVisualizar"
        app:layout_constraintStart_toEndOf="@+id/imvFechaIngresoVisualizar"
        android:importantForAutofill="no" />

    <EditText
        android:id="@+id/txtMCarrera"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginBottom="21dp"
        android:ems="10"
        android:hint="@string/txtnombrecarrera"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toTopOf="@+id/txtMFecha"
        app:layout_constraintStart_toEndOf="@+id/imvNombreCarreraVisualizar"
        android:importantForAutofill="no" />

    <EditText
        android:id="@+id/txtMCorreo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="13dp"
        android:layout_marginTop="23dp"
        android:ems="10"
        android:hint="@string/txtcorreoelectronico"
        android:inputType="textPersonName"
        app:layout_constraintStart_toEndOf="@+id/imvCorreoElectronicoVisualizar"
        app:layout_constraintTop_toBottomOf="@+id/txtMFecha"
        android:importantForAutofill="no" />

    <ImageView
        android:id="@+id/imvNombreCarreraVisualizar"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="1dp"
        android:layout_marginEnd="1dp"
        android:contentDescription= "@string/imgnombrecarrera"
        app:layout_constraintBottom_toBottomOf="@+id/txtMCarrera"
        app:layout_constraintEnd_toEndOf="@+id/imvFechaIngresoVisualizar"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/imvNombreAlumnoVisualizar"
        app:layout_constraintTop_toTopOf="@+id/txtMCarrera"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/pergamino" />

    <ImageView
        android:id="@+id/imvNombreAlumnoVisualizar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:contentDescription= "@string/imgnombrealumno"
        app:layout_constraintStart_toStartOf="@+id/imvNumeroCuentaVisualizar"
        app:layout_constraintTop_toBottomOf="@+id/imvNumeroCuentaVisualizar"
        app:srcCompat="@drawable/libro1" />

    <EditText
        android:id="@+id/txtMBuscar"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="45dp"
        android:layout_marginTop="76dp"
        android:layout_marginEnd="45dp"
        android:layout_marginBottom="68dp"
        android:ems="10"
        android:hint="@string/txtingresenumerocuenta"
        android:inputType="textPersonName"
        android:maxLength="10"
        app:layout_constraintBottom_toBottomOf="@+id/btnBuscarA"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/txvTituloA"
        android:importantForAutofill="no" />

    <TextView
        android:id="@+id/txvTituloA"
        android:layout_width="0dp"
        android:layout_height="40dp"
        android:layout_marginStart="55dp"
        android:layout_marginTop="57dp"
        android:layout_marginEnd="55dp"
        android:text="@string/txvtitulovisualizaralumnos"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btnBuscarA"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="80dp"
        android:layout_marginBottom="49dp"
        android:text="@string/btnbuscar"
        app:layout_constraintBottom_toTopOf="@+id/txtMNumero"
        app:layout_constraintStart_toStartOf="@+id/txtMBuscar" />

</androidx.constraintlayout.widget.ConstraintLayout>