<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/fondo1"
    tools:context=".AlumnosActivity">

    <TextView
        android:id="@+id/txvAlumnos"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="22dp"
        android:background="#CEFBFBFB"
        android:fontFamily="sans-serif-black"
        android:text="@string/txvtituloalumnos"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
        android:textColorHighlight="@color/black"
        android:textColorLink="#0B0A0A"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imvNumeroCuenta"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginTop="115dp"
        android:layout_marginBottom="114dp"
        android:contentDescription="@string/imgnumerocuenta"
        app:layout_constraintBottom_toTopOf="@+id/txtNombreCarrera"
        app:layout_constraintEnd_toStartOf="@+id/txtNumeroCuenta"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/txvAlumnos"
        app:srcCompat="@drawable/numerolibro" />

    <ImageView
        android:id="@+id/imvNombreCarrera"
        android:layout_width="0dp"
        android:layout_height="46dp"
        android:layout_marginStart="44dp"
        android:layout_marginEnd="27dp"
        android:layout_marginBottom="48dp"
        android:contentDescription="@string/imgnombrecarrera"
        app:layout_constraintBottom_toTopOf="@+id/imvFechaIngreso"
        app:layout_constraintEnd_toStartOf="@+id/txtNombreCarrera"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/pergamino" />

    <EditText
        android:id="@+id/txtNumeroCuenta"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="26dp"
        android:ems="10"
        android:hint="@string/txtnumerocuenta"
        android:inputType="number"
        android:maxLength="10"
        app:layout_constraintBottom_toBottomOf="@+id/imvNumeroCuenta"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/imvNumeroCuenta"
        android:importantForAutofill="no" />

    <ImageView
        android:id="@+id/imgNombreAlumno"
        android:layout_width="0dp"
        android:layout_height="47dp"
        android:layout_marginStart="44dp"
        android:layout_marginTop="80dp"
        android:layout_marginEnd="28dp"
        android:layout_marginBottom="80dp"
        android:contentDescription="@string/imgnombrealumno"
        app:layout_constraintBottom_toBottomOf="@+id/imvNombreCarrera"
        app:layout_constraintEnd_toStartOf="@+id/txtNombreAlumno"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/imvNumeroCuenta"
        app:srcCompat="@drawable/libro1" />

    <EditText
        android:id="@+id/txtNombreAlumno"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="62dp"
        android:ems="10"
        android:hint="@string/txtnombrealumno"
        android:inputType="textPersonName"
        android:maxLength="30"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/imgNombreAlumno"
        app:layout_constraintTop_toTopOf="@+id/imgNombreAlumno"
        android:importantForAutofill="no" />

    <EditText
        android:id="@+id/txtNombreCarrera"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="61dp"
        android:ems="10"
        android:hint="@string/txtnombrecarrera"
        android:inputType="textPersonName"
        android:maxLength="30"
        app:layout_constraintBottom_toBottomOf="@+id/imvNombreCarrera"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/imvNombreCarrera"
        android:importantForAutofill="no" />

    <EditText
        android:id="@+id/txtCorreo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="62dp"
        android:ems="10"
        android:hint="@string/txtcorreoelectronico"
        android:inputType="textPersonName"
        android:maxLength="30"
        app:layout_constraintBottom_toBottomOf="@+id/imvCorreo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/imvCorreo"
        android:importantForAutofill="no" />

    <ImageView
        android:id="@+id/imvCorreo"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginStart="47dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="25dp"
        android:contentDescription="@string/imgcorreoelectronico"
        app:layout_constraintEnd_toStartOf="@+id/txtCorreo"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imvFechaIngreso"
        app:srcCompat="@drawable/email" />

    <Button
        android:id="@+id/btnVer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="65dp"
        android:layout_marginEnd="11dp"
        android:text="@string/btnvisualizar"
        app:iconTint="#0C0C0C"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/btnSave"
        app:layout_constraintTop_toBottomOf="@+id/txtCorreo" />

    <EditText
        android:id="@+id/txtFechaIngreso"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="62dp"
        android:clickable="false"
        android:ems="10"
        android:focusable="false"
        android:hint="@string/txtfechaingreso"
        android:inputType="textPersonName"
        android:maxLength="10"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/imvFechaIngreso"
        app:layout_constraintTop_toTopOf="@+id/imvFechaIngreso"
        android:importantForAutofill="no" />

    <ImageView
        android:id="@+id/imvFechaIngreso"
        android:layout_width="0dp"
        android:layout_height="47dp"
        android:layout_marginStart="45dp"
        android:layout_marginEnd="28dp"
        android:contentDescription="@string/imgfechaingreso"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/txtFechaIngreso"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/fecha" />

    <Button
        android:id="@+id/btnSave"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="27dp"
        android:text="@string/btnguarda"
        app:iconTint="#070707"
        app:layout_constraintBaseline_toBaselineOf="@+id/btnVer"
        app:layout_constraintEnd_toStartOf="@+id/btnVer"
        app:layout_constraintStart_toStartOf="parent"
        app:rippleColor="#2E2727" />

</androidx.constraintlayout.widget.ConstraintLayout>