<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/fondo2"
    tools:context=".LibrosActivity">

    <EditText
        android:id="@+id/txtNumeroPrestamoLibro"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginEnd="41dp"
        android:layout_marginBottom="47dp"
        android:backgroundTint="@color/black"
        android:ems="10"
        android:hint="@string/txtNumeroPrestamo"
        android:inputType="number"
        app:layout_constraintBottom_toTopOf="@+id/txtFechaPrestamo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/txvNumeroPrestamoLibro"
        app:layout_constraintTop_toBottomOf="@+id/txtNumeroLibro"
        android:autofillHints="" />

    <TextView
        android:id="@+id/txvNumeroPrestamoLibro"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="34dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="51dp"
        android:background="@drawable/libro1"
        app:layout_constraintBottom_toTopOf="@+id/imvFechaPrestamo"
        app:layout_constraintEnd_toStartOf="@+id/txtNumeroPrestamoLibro"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txvNumeroLibro" />

    <EditText
        android:id="@+id/txtNumeroLibro"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginEnd="38dp"
        android:layout_marginBottom="39dp"
        android:ems="10"
        android:hint="@string/txtnumerolibro"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toTopOf="@+id/txtNumeroPrestamoLibro"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/txvNumeroLibro"
        app:layout_constraintTop_toBottomOf="@+id/txvTitulo"
        android:autofillHints="" />

    <TextView
        android:id="@+id/txvNumeroLibro"
        android:layout_width="42dp"
        android:layout_height="44dp"
        android:layout_marginStart="31dp"
        android:layout_marginTop="143dp"
        android:layout_marginEnd="12dp"
        android:layout_marginBottom="44dp"
        android:background="@drawable/numerolibro"
        app:layout_constraintBottom_toTopOf="@+id/txvNumeroPrestamoLibro"
        app:layout_constraintEnd_toStartOf="@+id/txtNumeroLibro"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/txvTitulo"
        android:layout_width="197dp"
        android:layout_height="0dp"
        android:layout_marginStart="90dp"
        android:layout_marginTop="58dp"
        android:layout_marginEnd="90dp"
        android:layout_marginBottom="39dp"
        android:background="@android:drawable/divider_horizontal_dark"
        android:fontFamily="sans-serif-black"
        android:text="@string/txvprestamolibro"
        app:autoSizeTextType="uniform"
        app:layout_constraintBottom_toTopOf="@+id/txtNumeroLibro"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/txvNumeroPrestamoLibro"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/txvFechaPrestamo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="90dp"
        android:layout_marginEnd="3dp"
        app:layout_constraintEnd_toStartOf="@+id/txtFechaPrestamo"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/txtFechaPrestamo" />


    <EditText
        android:id="@+id/txtFechaPrestamo"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginEnd="42dp"
        android:layout_marginBottom="34dp"
        android:clickable="false"
        android:focusable="false"
        android:hint="@string/txtfechaprestamo"
        android:inputType="date"
        android:selectAllOnFocus="false"
        app:layout_constraintBottom_toTopOf="@+id/txtFechaDevolucion"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/imvFechaPrestamo"
        app:layout_constraintTop_toBottomOf="@+id/txtNumeroPrestamoLibro"
        android:autofillHints="" />

    <ImageView
        android:id="@+id/imvFechaPrestamo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="34dp"
        android:layout_marginEnd="9dp"
        android:layout_marginBottom="47dp"
        android:contentDescription="@string/imvselectorfecha"
        app:layout_constraintBottom_toTopOf="@+id/txvFechaDevolucion"
        app:layout_constraintEnd_toStartOf="@+id/txtFechaPrestamo"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txvNumeroPrestamoLibro"
        app:srcCompat="@drawable/fecha" />

    <TextView
        android:id="@+id/txtFechaDevolucion"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginEnd="46dp"
        android:layout_marginBottom="38dp"
        android:clickable="false"
        android:cursorVisible="false"
        android:ems="10"
        android:enabled="true"
        android:fontFamily="sans-serif"
        android:hint="@string/txvfechadevolucion"
        android:inputType="date"
        android:paddingLeft="8dp"
        android:paddingTop="5dp"
        android:paddingEnd="5dp"
        android:paddingRight="8dp"
        android:textColor="#000000"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/txtNumeroCuenta"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/txvFechaDevolucion"
        app:layout_constraintTop_toBottomOf="@+id/txtFechaPrestamo" />

    <TextView
        android:id="@+id/txvFechaDevolucion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="37dp"
        android:layout_marginEnd="5dp"
        android:layout_marginBottom="43dp"
        android:background="@drawable/fecha"
        app:layout_constraintBottom_toTopOf="@+id/txvNumeroCuenta"
        app:layout_constraintEnd_toStartOf="@+id/txtFechaDevolucion"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imvFechaPrestamo" />

    <Button
        android:id="@+id/btnSave"
        android:layout_width="182dp"
        android:layout_height="62dp"
        android:layout_marginStart="191dp"
        android:layout_marginTop="618dp"
        android:layout_marginEnd="38dp"
        android:layout_marginBottom="51dp"
        android:text="@string/btnvisualisarprestamo"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btnGuardar"
        android:layout_width="118dp"
        android:layout_height="52dp"
        android:layout_marginStart="43dp"
        android:layout_marginTop="618dp"
        android:layout_marginEnd="250dp"
        android:layout_marginBottom="61dp"
        android:background="@android:color/holo_purple"
        android:backgroundTint="#BA1F1F"
        android:text="@string/btnguardarprestamo"
        app:iconTint="@color/purple_200"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/txtNumeroCuenta"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginEnd="47dp"
        android:layout_marginBottom="39dp"
        android:ems="10"
        android:hint="@string/txtnumerocuenta"
        android:inputType="number"
        app:layout_constraintBottom_toTopOf="@+id/btnSave"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/txvNumeroCuenta"
        app:layout_constraintTop_toBottomOf="@+id/txtFechaDevolucion"
        android:autofillHints="" />

    <TextView
        android:id="@+id/txvNumeroCuenta"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="42dp"
        android:layout_marginEnd="4dp"
        android:layout_marginBottom="53dp"
        android:background="@drawable/editorial"
        app:layout_constraintBottom_toTopOf="@+id/btnGuardar"
        app:layout_constraintEnd_toStartOf="@+id/txtNumeroCuenta"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txvFechaDevolucion" />

</androidx.constraintlayout.widget.ConstraintLayout>